# inventree_lectronz

./: .pre-commit-config.yaml  README.md  pyproject.toml
inventree_lectronz/: __init__.py  create_sales_order.py  lectronz_v1.py  plugin.py  templatetags.py
inventree_lectronz/templates/: lectronz_order.html  lectronz_product.html
