[project]
name = "inventree-lectronz"
version = "1.0-pre"
description = "Lectronz integration for InvenTree"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
]
license.text = "MIT"
authors = [{ name = "Bobbe", email = "mail@30350n.de" }]

[project.urls]
Homepage = "https://github.com/30350n/inventree_lectronz"

[project.entry-points."inventree_plugins"]
inventree-lectronz = "inventree_lectronz:plugin.LectronzPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".git", ".jj", ".github/", ".gitignore", ".pre-commit-config.yaml"]

[tool.autopep8]
aggressive = 3
max_line_length = 96
ignore = "E12,E13,E201,E202,E221,E241,E261,E302,E305,E401,E402"

[tool.isort]
line_length = 96
lines_after_imports = 1
combine_straight_imports = true
